<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/label_map" />
    <item android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/label_orders" />
    <item android:id="@+id/nav_fleet"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/label_fleet" />
    <item android:id="@+id/nav_staff"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/label_staff" />
    <item android:id="@+id/nav_buildings"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/label_buildings" />
</menu>
